--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,3 +2,7 @@ erikbernskiold:
     name: Erik Bernskiold
     url: https://github.com/erikbernskiold
     image_url: https://github.com/erikbernskiold.png
+nachomaiz:
+    name: Ignacio Maiz
+    url: https://github.com/nachomaiz
+    image_url: https://github.com/nachomaiz.png
